test/corpus/verus.txt
================================================================================
Spec function
================================================================================

spec fn abs(n: int) -> int {
    if n < 0 { -n } else { n }
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (function_modifiers)
    (identifier)
    (parameters
      (parameter
        (identifier)
        (primitive_type)))
    (primitive_type)
    (block
      (expression_statement
        (if_expression
          (binary_expression
            (identifier)
            (integer_literal))
          (block
            (unary_expression
              (identifier)))
          (else_clause
            (block
              (identifier))))))))

================================================================================
Open spec function
================================================================================

pub open spec fn total(s: Seq<int>) -> int {
    0
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (visibility_modifier)
    (function_modifiers)
    (identifier)
    (parameters
      (parameter
        (identifier)
        (generic_type
          (type_identifier)
          (type_arguments
            (primitive_type)))))
    (primitive_type)
    (block
      (integer_literal))))

================================================================================
Proof function with requires/ensures
================================================================================

proof fn lemma_add(x: int, y: int)
    requires
        x > 0,
        y > 0,
    ensures
        x + y > 0,
{
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (function_modifiers)
    (identifier)
    (parameters
      (parameter
        (identifier)
        (primitive_type))
      (parameter
        (identifier)
        (primitive_type)))
    (requires_clause
      (binary_expression
        (identifier)
        (integer_literal))
      (binary_expression
        (identifier)
        (integer_literal)))
    (ensures_clause
      (binary_expression
        (binary_expression
          (identifier)
          (identifier))
        (integer_literal)))
    (block)))

================================================================================
Named return type
================================================================================

fn add_one(x: u32) -> (result: u32)
    requires x < 0xFFFFFFFF,
    ensures result == x + 1,
{
    x + 1
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (identifier)
    (parameters
      (parameter
        (identifier)
        (primitive_type)))
    (named_return_type
      (identifier)
      (primitive_type))
    (requires_clause
      (binary_expression
        (identifier)
        (integer_literal)))
    (ensures_clause
      (binary_expression
        (identifier)
        (binary_expression
          (identifier)
          (integer_literal))))
    (block
      (binary_expression
        (identifier)
        (integer_literal)))))

================================================================================
Decreases clause
================================================================================

spec fn fib(n: nat) -> nat
    decreases n,
{
    if n <= 1 { n } else { fib(n - 1) + fib(n - 2) }
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (function_modifiers)
    (identifier)
    (parameters
      (parameter
        (identifier)
        (primitive_type)))
    (primitive_type)
    (decreases_clause
      (identifier))
    (block
      (expression_statement
        (if_expression
          (binary_expression
            (identifier)
            (integer_literal))
          (block
            (identifier))
          (else_clause
            (block
              (binary_expression
                (call_expression
                  (identifier)
                  (arguments
                    (binary_expression
                      (identifier)
                      (integer_literal))))
                (call_expression
                  (identifier)
                  (arguments
                    (binary_expression
                      (identifier)
                      (integer_literal))))))))))))

================================================================================
Let ghost binding
================================================================================

fn example(v: Vec<u32>) {
    let ghost len = v.len();
    let ghost mut counter = 0;
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (identifier)
    (parameters
      (parameter
        (identifier)
        (generic_type
          (type_identifier)
          (type_arguments
            (primitive_type)))))
    (block
      (let_declaration
        (identifier)
        (call_expression
          (field_expression
            (identifier)
            (field_identifier))
          (arguments)))
      (let_declaration
        (mutable_specifier)
        (identifier)
        (integer_literal)))))

================================================================================
Let tracked binding
================================================================================

fn example() {
    let tracked x = 42;
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (identifier)
    (parameters)
    (block
      (let_declaration
        (identifier)
        (integer_literal)))))

================================================================================
View expression (@)
================================================================================

fn example(v: &Vec<u32>) {
    let ghost len = v@.len();
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (identifier)
    (parameters
      (parameter
        (identifier)
        (reference_type
          (generic_type
            (type_identifier)
            (type_arguments
              (primitive_type))))))
    (block
      (let_declaration
        (identifier)
        (call_expression
          (field_expression
            (view_expression
              (identifier))
            (field_identifier))
          (arguments))))))

================================================================================
View expression with indexing
================================================================================

fn example(v: &Vec<u32>) {
    let ghost x = v@[0];
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (identifier)
    (parameters
      (parameter
        (identifier)
        (reference_type
          (generic_type
            (type_identifier)
            (type_arguments
              (primitive_type))))))
    (block
      (let_declaration
        (identifier)
        (index_expression
          (view_expression
            (identifier))
          (integer_literal))))))

================================================================================
View expression with subrange
================================================================================

fn example(a: &[u32], off: usize, n: usize) {
    let ghost sub = a@.subrange(off as int, (off + n) as int);
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (identifier)
    (parameters
      (parameter
        (identifier)
        (reference_type
          (array_type
            (primitive_type))))
      (parameter
        (identifier)
        (primitive_type))
      (parameter
        (identifier)
        (primitive_type)))
    (block
      (let_declaration
        (identifier)
        (call_expression
          (field_expression
            (view_expression
              (identifier))
            (field_identifier))
          (arguments
            (type_cast_expression
              (identifier)
              (primitive_type))
            (type_cast_expression
              (parenthesized_expression
                (binary_expression
                  (identifier)
                  (identifier)))
              (primitive_type))))))))

================================================================================
Proof block
================================================================================

fn example() {
    proof {
        assert(1 + 1 == 2);
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (identifier)
    (parameters)
    (block
      (expression_statement
        (proof_block
          (block
            (expression_statement
              (assert_expression
                (binary_expression
                  (binary_expression
                    (integer_literal)
                    (integer_literal))
                  (integer_literal))))))))))

================================================================================
Assert by block
================================================================================

fn example(x: int) {
    assert(x > 0) by {
        assume(x > 0);
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (identifier)
    (parameters
      (parameter
        (identifier)
        (primitive_type)))
    (block
      (expression_statement
        (assert_expression
          (binary_expression
            (identifier)
            (integer_literal))
          (block
            (expression_statement
              (assume_expression
                (binary_expression
                  (identifier)
                  (integer_literal))))))))))

================================================================================
Assert by nonlinear_arith with requires
================================================================================

fn example(x: int, y: int) {
    assert(x * y > 0) by(nonlinear_arith)
        requires x > 0, y > 0,
    {
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (identifier)
    (parameters
      (parameter
        (identifier)
        (primitive_type))
      (parameter
        (identifier)
        (primitive_type)))
    (block
      (expression_statement
        (assert_expression
          (binary_expression
            (binary_expression
              (identifier)
              (identifier))
            (integer_literal))
          (identifier)
          (identifier)
          (integer_literal)
          (identifier)
          (integer_literal))))))

================================================================================
Assert by solver no body
================================================================================

fn example(x: u32) {
    assert(x & 1 == 0) by(bit_vector);
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (identifier)
    (parameters
      (parameter
        (identifier)
        (primitive_type)))
    (block
      (expression_statement
        (assert_expression
          (binary_expression
            (binary_expression
              (identifier)
              (integer_literal))
            (integer_literal))
          (identifier))))))

================================================================================
Assert by solver requires no body
================================================================================

fn example(x: int, y: int) {
    assert(x * y >= 0) by(nonlinear_arith)
        requires x >= 0, y >= 0;
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (identifier)
    (parameters
      (parameter
        (identifier)
        (primitive_type))
      (parameter
        (identifier)
        (primitive_type)))
    (block
      (expression_statement
        (assert_expression
          (binary_expression
            (binary_expression
              (identifier)
              (identifier))
            (integer_literal))
          (identifier)
          (identifier)
          (integer_literal)
          (identifier)
          (integer_literal)))
      (empty_statement))))

================================================================================
Assert by solver with body no requires
================================================================================

fn example(x: int) {
    assert(x > 0) by(nonlinear_arith) {
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (identifier)
    (parameters
      (parameter
        (identifier)
        (primitive_type)))
    (block
      (expression_statement
        (assert_expression
          (binary_expression
            (identifier)
            (integer_literal))
          (identifier)
          (block))))))

================================================================================
Assert forall with trigger
================================================================================

fn example(s: Seq<int>) {
    assert forall |i: int| 0 <= i < s.len() implies #[trigger] s[i] > 0
    by {
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (identifier)
    (parameters
      (parameter
        (identifier)
        (generic_type
          (type_identifier)
          (type_arguments
            (primitive_type)))))
    (block
      (expression_statement
        (assert_expression
          (closure_parameters
            (parameter
              (identifier)
              (primitive_type)))
          (binary_expression
            (binary_expression
              (binary_expression
                (integer_literal)
                (identifier))
              (call_expression
                (field_expression
                  (identifier)
                  (field_identifier))
                (arguments)))
            (attributed_expression
              (attribute_item
                (attribute
                  (identifier)))
              (binary_expression
                (index_expression
                  (identifier)
                  (identifier))
                (integer_literal))))
          (block))))))

================================================================================
Forall expression
================================================================================

spec fn all_positive(s: Seq<int>) -> bool {
    forall |i: int| 0 <= i < s.len() ==> s[i] > 0
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (function_modifiers)
    (identifier)
    (parameters
      (parameter
        (identifier)
        (generic_type
          (type_identifier)
          (type_arguments
            (primitive_type)))))
    (primitive_type)
    (block
      (forall_expression
        (closure_parameters
          (parameter
            (identifier)
            (primitive_type)))
        (binary_expression
          (binary_expression
            (binary_expression
              (integer_literal)
              (identifier))
            (call_expression
              (field_expression
                (identifier)
                (field_identifier))
              (arguments)))
          (binary_expression
            (index_expression
              (identifier)
              (identifier))
            (integer_literal)))))))

================================================================================
Exists expression
================================================================================

spec fn has_zero(s: Seq<int>) -> bool {
    exists |i: int| 0 <= i < s.len() && s[i] == 0
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (function_modifiers)
    (identifier)
    (parameters
      (parameter
        (identifier)
        (generic_type
          (type_identifier)
          (type_arguments
            (primitive_type)))))
    (primitive_type)
    (block
      (exists_expression
        (closure_parameters
          (parameter
            (identifier)
            (primitive_type)))
        (binary_expression
          (binary_expression
            (binary_expression
              (integer_literal)
              (identifier))
            (call_expression
              (field_expression
                (identifier)
                (field_identifier))
              (arguments)))
          (binary_expression
            (index_expression
              (identifier)
              (identifier))
            (integer_literal)))))))

================================================================================
Choose expression
================================================================================

proof fn example(s: Seq<int>) {
    let w = choose |i: int| 0 <= i < s.len() && s[i] > 10;
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (function_modifiers)
    (identifier)
    (parameters
      (parameter
        (identifier)
        (generic_type
          (type_identifier)
          (type_arguments
            (primitive_type)))))
    (block
      (let_declaration
        (identifier)
        (choose_expression
          (closure_parameters
            (parameter
              (identifier)
              (primitive_type)))
          (binary_expression
            (binary_expression
              (binary_expression
                (integer_literal)
                (identifier))
              (call_expression
                (field_expression
                  (identifier)
                  (field_identifier))
                (arguments)))
            (binary_expression
              (index_expression
                (identifier)
                (identifier))
              (integer_literal))))))))

================================================================================
Implication operator ==>
================================================================================

spec fn implies_test(a: bool, b: bool) -> bool {
    a ==> b
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (function_modifiers)
    (identifier)
    (parameters
      (parameter
        (identifier)
        (primitive_type))
      (parameter
        (identifier)
        (primitive_type)))
    (primitive_type)
    (block
      (binary_expression
        (identifier)
        (identifier)))))

================================================================================
Biconditional operator <==>
================================================================================

spec fn iff_test(a: bool, b: bool) -> bool {
    a <==> b
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (function_modifiers)
    (identifier)
    (parameters
      (parameter
        (identifier)
        (primitive_type))
      (parameter
        (identifier)
        (primitive_type)))
    (primitive_type)
    (block
      (binary_expression
        (identifier)
        (identifier)))))

================================================================================
Triple equals === and !==
================================================================================

spec fn eq_test(a: int, b: int) -> bool {
    a === b && a !== b
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (function_modifiers)
    (identifier)
    (parameters
      (parameter
        (identifier)
        (primitive_type))
      (parameter
        (identifier)
        (primitive_type)))
    (primitive_type)
    (block
      (binary_expression
        (binary_expression
          (identifier)
          (identifier))
        (binary_expression
          (identifier)
          (identifier))))))

================================================================================
Extensional equality =~= and =~~=
================================================================================

proof fn ext_eq_test(a: Seq<int>, b: Seq<int>) {
    assert(a =~= b);
    assert(a =~~= b);
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (function_modifiers)
    (identifier)
    (parameters
      (parameter
        (identifier)
        (generic_type
          (type_identifier)
          (type_arguments
            (primitive_type))))
      (parameter
        (identifier)
        (generic_type
          (type_identifier)
          (type_arguments
            (primitive_type)))))
    (block
      (expression_statement
        (assert_expression
          (binary_expression
            (identifier)
            (identifier))))
      (expression_statement
        (assert_expression
          (binary_expression
            (identifier)
            (identifier)))))))

================================================================================
While loop with invariant
================================================================================

fn sum_to(n: u64) -> (s: u64)
    requires n < 1000,
    ensures s == n * (n + 1) / 2,
{
    let mut s: u64 = 0;
    let mut i: u64 = 0;
    while i < n
        invariant
            i <= n,
            s == i * (i + 1) / 2,
            n < 1000,
        decreases n - i,
    {
        i = i + 1;
        s = s + i;
    }
    s
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (identifier)
    (parameters
      (parameter
        (identifier)
        (primitive_type)))
    (named_return_type
      (identifier)
      (primitive_type))
    (requires_clause
      (binary_expression
        (identifier)
        (integer_literal)))
    (ensures_clause
      (binary_expression
        (identifier)
        (binary_expression
          (binary_expression
            (identifier)
            (parenthesized_expression
              (binary_expression
                (identifier)
                (integer_literal))))
          (integer_literal))))
    (block
      (let_declaration
        (mutable_specifier)
        (identifier)
        (primitive_type)
        (integer_literal))
      (let_declaration
        (mutable_specifier)
        (identifier)
        (primitive_type)
        (integer_literal))
      (expression_statement
        (while_expression
          (binary_expression
            (identifier)
            (identifier))
          (invariant_clause
            (binary_expression
              (identifier)
              (identifier))
            (binary_expression
              (identifier)
              (binary_expression
                (binary_expression
                  (identifier)
                  (parenthesized_expression
                    (binary_expression
                      (identifier)
                      (integer_literal))))
                (integer_literal)))
            (binary_expression
              (identifier)
              (integer_literal)))
          (decreases_clause
            (binary_expression
              (identifier)
              (identifier)))
          (block
            (expression_statement
              (assignment_expression
                (identifier)
                (binary_expression
                  (identifier)
                  (integer_literal))))
            (expression_statement
              (assignment_expression
                (identifier)
                (binary_expression
                  (identifier)
                  (identifier)))))))
      (identifier))))

================================================================================
For loop with invariant
================================================================================

fn example(v: &Vec<u32>, n: usize) {
    for k in 0..n
        invariant n <= v@.len(),
    {
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (identifier)
    (parameters
      (parameter
        (identifier)
        (reference_type
          (generic_type
            (type_identifier)
            (type_arguments
              (primitive_type)))))
      (parameter
        (identifier)
        (primitive_type)))
    (block
      (expression_statement
        (for_expression
          (identifier)
          (range_expression
            (integer_literal)
            (identifier))
          (invariant_clause
            (binary_expression
              (identifier)
              (call_expression
                (field_expression
                  (view_expression
                    (identifier))
                  (field_identifier))
                (arguments))))
          (block))))))

================================================================================
Ghost parameter
================================================================================

fn example(ghost x: int, tracked y: int) {
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (identifier)
    (parameters
      (parameter
        (identifier)
        (primitive_type))
      (parameter
        (identifier)
        (primitive_type)))
    (block)))

================================================================================
Broadcast use
================================================================================

broadcast use lemma_seq_push_index;

--------------------------------------------------------------------------------

(source_file
  (broadcast_use_item
    (identifier)))

================================================================================
Broadcast group
================================================================================

pub broadcast group group_ring_axioms {
    lemma_add_comm,
    lemma_mul_comm,
}

--------------------------------------------------------------------------------

(source_file
  (broadcast_group
    (visibility_modifier)
    (type_identifier)
    (identifier)
    (identifier)))

================================================================================
Verus block
================================================================================

verus! {
    spec fn double(x: int) -> int {
        x + x
    }
}

--------------------------------------------------------------------------------

(source_file
  (verus_block
    (declaration_list
      (function_item
        (function_modifiers)
        (identifier)
        (parameters
          (parameter
            (identifier)
            (primitive_type)))
        (primitive_type)
        (block
          (binary_expression
            (identifier)
            (identifier)))))))

================================================================================
Chained conjunction &&&
================================================================================

spec fn multi_cond(x: int, y: int) -> bool {
    &&& x > 0
    &&& y > 0
    &&& x + y > 0
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (function_modifiers)
    (identifier)
    (parameters
      (parameter
        (identifier)
        (primitive_type))
      (parameter
        (identifier)
        (primitive_type)))
    (primitive_type)
    (block
      (chained_conjunction
        (binary_expression
          (identifier)
          (integer_literal))
        (binary_expression
          (identifier)
          (integer_literal))
        (binary_expression
          (binary_expression
            (identifier)
            (identifier))
          (integer_literal))))))

================================================================================
Chained disjunction |||
================================================================================

spec fn any_cond(x: int) -> bool {
    ||| x == 0
    ||| x == 1
    ||| x == 2
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (function_modifiers)
    (identifier)
    (parameters
      (parameter
        (identifier)
        (primitive_type)))
    (primitive_type)
    (block
      (chained_disjunction
        (binary_expression
          (identifier)
          (integer_literal))
        (binary_expression
          (identifier)
          (integer_literal))
        (binary_expression
          (identifier)
          (integer_literal))))))

================================================================================
Attributed expression #[trigger]
================================================================================

proof fn trigger_test(s: Seq<int>) {
    assert forall |i: int| 0 <= i < s.len() implies #[trigger] s[i] > 0
    by {
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (function_modifiers)
    (identifier)
    (parameters
      (parameter
        (identifier)
        (generic_type
          (type_identifier)
          (type_arguments
            (primitive_type)))))
    (block
      (expression_statement
        (assert_expression
          (closure_parameters
            (parameter
              (identifier)
              (primitive_type)))
          (binary_expression
            (binary_expression
              (binary_expression
                (integer_literal)
                (identifier))
              (call_expression
                (field_expression
                  (identifier)
                  (field_identifier))
                (arguments)))
            (attributed_expression
              (attribute_item
                (attribute
                  (identifier)))
              (binary_expression
                (index_expression
                  (identifier)
                  (identifier))
                (integer_literal))))
          (block))))))
